# E2E-ML-pipeline

./: README.md  pyproject.toml  sample_to_upload.csv
app/: docker-compose.yml
app/backend/: Dockerfile  main.py  requirements.txt  test.ipynb  utils.py
app/backend/Modelfile/: meta.yaml
app/backend/Modelfile/metrics/: auc  log_loss
app/backend/Modelfile/model/: requirements.txt
app/backend/api/: models.py  schemas.py
app/frontend/: Dockerfile  app.py  main.py  requirements.txt
deploy/: docker-compose.yml
deploy/backend/: Dockerfile  main.py  utils.py
deploy/backend/api/: database.py
deploy/backend/model/model/: cross-sale-pipeline.pkl
deploy/frontend/: Dockerfile  app.py
model_dev/: 01_DataCollection_and_EDA.ipynb  01_EDA.ipynb  01_dataCollection_and_EDA.ipynb  02_baseline_model.ipynb  03_autoML_PyCaret.ipynb  04_autoML_H2O.ipynb  eda_utils.py  prep_data_utils.py
model_dev/.ipynb_checkpoints/: 02_baseline_model-checkpoint.ipynb
model_dev/mlruns/0/: meta.yaml
model_dev/mlruns/1/: meta.yaml
model_dev/mlruns/1/528dae9178714de58ad4142c7b72f4f9/: meta.yaml
model_dev/mlruns/1/6c340b07d20649839f56b88487a26a34/: meta.yaml
model_dev/mlruns/1/6eca58e96430479294bcabffb3df7183/: meta.yaml
model_dev/mlruns/1/7748665ddfd04dd9bc3c5ffcec1d6376/: meta.yaml
model_dev/mlruns/1/83dfe7dda2d8410b9813bd8db2085c23/: meta.yaml
model_dev/mlruns/1/8eafc73b07254813a76e4e899ad254d0/: meta.yaml
model_dev/mlruns/2/: meta.yaml
model_dev/model/: cross-sale-pipeline.pkl
tests/: test_api.ipynb  test_cross_sell.py  test_eda_utils.py
(+124 files in other folders)
