[tool.poetry]
name = "cross-sell"
version = "0.1.0"
description = ""
authors = ["vothaiduong14 <vothaiduong14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
streamlit = "^1.9.2"
mlflow = "^1.26.1"
torch = "^1.11.0"
torchvision = "^0.12.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
xgboost = "^1.6.1"
pycaret = "^2.3.10"
scikit-learn = "0.23.2"
uvicorn = "^0.17.6"
h2o = "^3.36.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
